Add support for multimoal messages, Chat and Streaming chat
 - Extend the Spring AI Message with getMediaData() : List<MediaData>
   MediaData is a pair of MimeType and data of type Object.
   Message#getContent() return text only.
 - Implement VertexAiGeiminChatClient for ChatClient and StreamingChat client and support for MediaData content.
   Add IT tests for Chat, Streaming and Multimodality
 - Add Auto-configuration + ITs
 - Add Spring Boot
 - Add Anotra documentation for the Gemini chat client.